--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
     - name:  Cypress.io
       uses:  cypress-io/github-action@v5.0.9
       with: 
-       start: npm start
+       start: npm run cypress
